# PandaNews

./: .gitignore
.claude/: .gitignore  AGENT_STANDARDS.md  AUDIT_FINDINGS.md  CHANGELOG.md  CHANGE_MANAGEMENT.md  CLAUDE.md  COMPANY_FLOWCHARTS.md  CREDENTIAL_REGISTRY.md  DATA_CLASSIFICATION.md  DEPARTMENT_WORKFLOWS.md  FAILURE_MUSEUM.md  GAMING.md  INDEX.md  LOCAL_MODEL_GUIDE.md  MOBILE_TERMINAL.md  ORG_CHARTS.md  ROADMAP.md  SYSTEM_MAP.md  TODO.md  _test_prompt.txt  ai-os.code-workspace  auto_changelog.py  batch_audit.py  batch_fix.py  batch_fix_agents.py  chain.py  custodian.py  custodian_plan.md  custodian_report.md  job_store.py  kiriko_bot.py  kiriko_bot.py.bak  md_parser.py  model_router.py  notify.py.bak  parallel_runner.py  prompt_cache.py  register_kiriko_task.ps1  registry.py  registry.yaml  (+15 more)
.claude/agents/: AI-Integration-Specialist.md  Account-Executive.md  Associate-Engineer.md  Audit-Associate.md  Audit-Manager.md  Auditor.md  BDR.md  CAE-Audit.md  CAIO-AI.md  CCO-Design.md  CDO-Data.md  CFO.md  CIO-Investments.md  CIRO-Research.md  CISO.md  COO.md  CPO.md  CPlatO-DevOps.md  CPrO-Prompting.md  CRO-GTM.md  CSM.md  CSO-Strategy.md  CTO-Engineering.md  Chief-Compliance-Officer.md  Compliance-Analyst.md  Compliance-Manager.md  Content-Strategist.md  Data-Scientist.md  Dir-AI-Research.md  Dir-Analytics.md  Dir-Cloud-Infrastructure.md  Dir-Competitive-Intelligence.md  Dir-Compliance.md  Dir-Corporate-Strategy.md  Dir-Customer-Support.md  Dir-Data-Engineering.md  Dir-Engineering.md  Dir-Finance.md  (+93 more)
ws-server/: Cargo.toml
ws-server/src/: main.rs
(+275 files in other folders)
